--- a/.github/ISSUE_TEMPLATE/general.yml
+++ b/.github/ISSUE_TEMPLATE/general.yml
@@ -1,4 +1,4 @@
-mame: "General Comment Form"
+name: "General Comment Form"
 description: "Chat about anything you like here."
 title: "Comment: "
 labels:
